--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ RPC_FANTOM=https://rpc.ftm.tools
 RPC_HARMONY=https://api.harmony.one
 RPC_METIS=https://andromeda.metis.io/
 RPC_BASE=https://mainnet.base.org
+RPC_GNOSIS=https://rpc.gnosischain.com/
 
 ETHERSCAN_API_KEY_MAINNET=
 ETHERSCAN_API_KEY_POLYGON=
@@ -19,3 +20,4 @@ ETHERSCAN_API_KEY_FANTOM=
 ETHERSCAN_API_KEY_OPTIMISM=
 ETHERSCAN_API_KEY_ARBITRUM=
 ETHERSCAN_API_KEY_BASE=
+ETHERSCAN_API_KEY_GNOSIS=
