--- a/foundry.toml
+++ b/foundry.toml
@@ -19,6 +19,7 @@ fantom = "${RPC_FANTOM}"
 harmony = "${RPC_HARMONY}"
 metis = "${RPC_METIS}"
 base = "${RPC_BASE}"
+gnosis = "${RPC_GNOSIS}"
 
 [etherscan]
 mainnet={key="${ETHERSCAN_API_KEY_MAINNET}",chainId=1}
@@ -28,5 +29,6 @@ polygon={key="${ETHERSCAN_API_KEY_POLYGON}",chainId=137}
 arbitrum={key="${ETHERSCAN_API_KEY_ARBITRUM}",chainId=42161}
 fantom={key="${ETHERSCAN_API_KEY_FANTOM}",chainId=250}
 base = { key="any", chainId=8453, url='https://basescan.org/' }
+gnosis = { key="any", chainId=100, url='https://blockscout.com/xdai/mainnet/api' }
 
 # See more config options https://github.com/gakonst/foundry/tree/master/config
